Update title and add font and stylesheet links and added functions

--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Math Question Generator</title>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
-<div>
+<body>
+<div class="container">
     <h5>I use ChatGPT/other AI tools to assist in partially/all the code. (Y)</h5>
     <h5>I use StackOverflow or search online on what to do or how to code. (N)</h5>
     <h5>I have assistance from my coworkers/friends/tech communities. (N)</h5>
@@ -24,5 +27,6 @@
     <p id="feedback"></p>
 </div>
 <script src="/js/script.js"></script>
+</body>
 
 </html>
