--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <h5>I have assistance from my coworkers/friends/tech communities. (N)</h5>
     <h1 id="questions">Question 1</h1>
     <div id="score-container">
-        <p id="score">Score: 0/0</p>
         <p id="streak">Streak: 0</p>
+        <p id="score">Score: 0</p>
     </div>
     <div id="question-container">
         <p id="question"></p>
